# chinese-number-converter

./: README.md  setup.cfg  test.py
cnc/: convert.py
cnc/chinese_number_converter.egg-info/: PKG-INFO
src/ChineseNumberUtils.egg-info/: PKG-INFO  SOURCES.txt
src/cnc/: convert.py
src/cnc/ChineseNumberUtils.egg-info/: PKG-INFO  SOURCES.txt
src/cnc/chinese_number_converter.egg-info/: SOURCES.txt
