[metadata]
name = chinese-number-converter
version = 0.0.3
author = NR
description = A simple converter between Chinese and arabic number
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nrchan/chinese-number-convertor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cnc
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cnc