[metadata]
name = chinese-number-converter
version = 1.0.0
author = NR
description = A simple converter between Chinese and arabic number
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nrchan/chinese-number-converter
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: Chinese (Traditional)
    Natural Language :: Chinese (Simplified)
    Topic :: Utilities

[options]
package_dir =
    = cnc
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cnc